edited intro page

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <script src="https://kit.fontawesome.com/c6acc2e611.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" rel="stylesheet">
-  </head>
-  <body>
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed&display=swap" rel="stylesheet">
+    <body>
     <noscript>
       <strong>We're sorry but travelspa doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
