refactoring of country cards

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre&display=swap" rel="stylesheet">
     <body>
     <noscript>
       <strong>We're sorry but travelspa doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
